@@ -48,4 +48,5 @@ dependencyManagement {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	jvmArgs += "-XX:+EnableDynamicAgentLoading"
 }
